[feature/#42] feat: 재고 생성 기능 구현